<resources>
    <string name="app_name">Journal</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in:</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="image_description">Logo</string>
    <string name="newuser">New User? Click <u>here</u> to sign up</string>
    <string name="olduser">Already have an account? Click <u>here</u> to login</string>
    <string name="splash_text">Your Personal Journal</string>
    <string name="logout">Logout</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_up_with_gmail">Sign up with Gmail</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_gmail">Sign in with Gmail</string>

    <!--Strings related to titles-->
    <string name="action_sign_in">Sign In</string>
    <string name="nav_home">My Journals</string>
    <string name="nav_settings">Settings</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_activity_settings">Settings</string>
    <string name="welcome">Journal</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Strings related to add journal activity-->
    <string name="journal_title">Add Title</string>
    <string name="journal_paragraph">Write down what you have in your mind</string>
    <string name="save_button">Save</string>
    <string name="discard_button">Discard</string>
    <string name="delete_icon">Delete</string>
    <string name="edit_icon">Edit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleted">Journal deleted</string>
    <string name="success_message">Login Successful</string>
    <string name="user_exists">The user already exists</string>
    <string name="data_insert_message">Journal added!</string>
    <string name="error_message_insert">Failed to insert data!</string>
    <string name="dismissed">Journal dismissed</string>
    <string name="recover_password">Enter your email to reset you password</string>
    <string name="send_button">Send</string>
    <string name="prompt_reset_password"><u>Reset Password:</u></string>
    <string name="prompt_delete_data"><u>Delete Data:</u></string>
    <string name="warning_deleting_data">\tThis will delete all your data with no chance of recovery</string>
    <string name="cancel_button">Cancel</string>
    <string name="change_of_activity">Redirecting...</string>

</resources>
