<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorText"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_reset_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/layout_margin_bottom"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/layout_margin_bottom"/>

    <EditText
        android:id="@+id/email_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/layout_margin_bottom"/>

    <Button
        android:id="@+id/send_button"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin_bottom"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/send_button"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_delete_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/layout_margin_bottom"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_deleting_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:drawableStart="@drawable/warning"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/layout_margin_bottom"/>

    <Button
        android:id="@+id/delete_button"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin_bottom"
        android:text="@string/delete"
        android:textStyle="bold" />

</LinearLayout>