<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorText"
    android:layout_height="match_parent"
    tools:context=".AddJournalActivity">

    <EditText
        android:id="@+id/journal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/journal_title"
        android:inputType="textMultiLine"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/layout_margin_bottom"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_paragraph"
        android:layout_below="@+id/journal_title">

        <EditText
            android:id="@+id/journal_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/journal_paragraph"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="@dimen/layout_margin_bottom"/>
    </ScrollView>


    <Button
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_bottom"
        android:text="@string/save_button"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/discard_button"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/layout_margin_bottom"
        android:text="@string/discard_button"
        android:textStyle="bold" />

</RelativeLayout>