<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorText"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_margin_bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon_two"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_description"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/layout_margin_bottom"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_up_button_email"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_bottom"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/signin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:clickable="true"
                android:text="@string/olduser"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextImportant"
                android:visibility="visible"/>

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>